<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    	 <TextView
            android:id="@+id/tx_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planificacion_de_actividades_semanales" 
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            />
    	 
    
        <TextView
            android:id="@+id/tx_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semana_planificacion" 
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/ed_dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txfechaprogramacion" 
            android:layout_marginBottom="20dp"
            >

        </EditText>

        <TextView
            android:id="@+id/tx_sup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_colaborador" 
            android:layout_marginBottom="10dp"/>

        <ExpandableListView
            android:id="@+id/expandableListView1"
            android:layout_width="match_parent"
            android:layout_height="30dp" 
            android:layout_marginBottom="160dp"
            >

        </ExpandableListView>
		
        

        <Button
            android:id="@+id/btnListar"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ListarOnclick"
            android:text="@string/siguiente" />
    

</LinearLayout>
