<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
     <TextView
            android:id="@+id/tx_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planificacion_de_actividades_semanales" 
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            />   	 
    
        <TextView
            android:id="@+id/tx_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_actividad" 
            android:layout_marginBottom="10dp"
            />
        
        <EditText
            android:id="@+id/ed_dni"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:inputType="text"
            android:hint="@string/ract_actividad" 
            android:layout_marginBottom="10dp"
            
            />

        
        
        <TextView
            android:id="@+id/tx_TipoActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_tiempo_estimado" 
            android:layout_marginBottom="10dp"
            />
        
        <EditText
            android:id="@+id/ed_tipoActividad"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:inputType="text"
            android:hint="@string/rest_tiempo_estimado" 
            android:layout_marginBottom="50dp"
            />
        
        <Button
            android:id="@+id/btn_registrarEstimado"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ListarOnclick"
            android:text="@string/rest_registrar_estimacion" />

</LinearLayout>
