<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
            android:id="@+id/tx_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planificacion_de_actividades_semanales" 
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            />
    	 
    
        <TextView
            android:id="@+id/tv_subTituloRegistrarPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semana_a_registrar" 
            android:layout_marginBottom="10dp"
            />        
        <ListView
	    android:id="@+id/lv_Planificacion"
	    android:layout_width="match_parent"
	    android:background="@android:color/darker_gray"
	    android:layout_height="187dp" >
    	</ListView>
    
        <GridView
            android:id="@+id/gv_Planificacion"
            android:layout_width="290dp"
            android:layout_height="10dp"
            android:numColumns="8"
            android:visibility="gone" >
            
        </GridView>
        
        <Button
            android:id="@+id/btnActividad"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ListarOnclick"
            android:text="@string/ra_agregar_actividad" />
        
        

</LinearLayout>
